Add problem info to the single problem page

--- a/problems/templates/paper_template.tex
+++ b/problems/templates/paper_template.tex
@@ -1,18 +1,17 @@
 \documentclass[12pt]{article}
 \pagestyle{empty}
-\usepackage{epigraph}
 
 \usepackage{enumitem}
 \setlist{nolistsep, itemsep=0.2cm,parsep=0pt}
 
 \usepackage{amsfonts, amsthm, epsfig, amsmath, amssymb, color}
 \usepackage{array}
-\usepackage{icomma}
+%\usepackage{icomma}
 \setlength{\jot}{1ex}
-\usepackage{gensymb}
+%\usepackage{gensymb}
 
 \usepackage{cmap}
-\usepackage{mathtext}
+%\usepackage{mathtext}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian,ukrainian]{babel}
